objects/Product_Collateral__c.object
<CustomObject>
    <description>This object is used for epm data</description>
    <fields>
        <fullName>Alt_Tag__c</fullName>
        <description>DPS-20819 Customer facing description of the asset. Used to meet accessibly requirements. Allowing for multiple languages.</description>
        <label>Alt Tag</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collateral_Path__c</fullName>
        <label>Collateral Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Title__c</fullName>
        <description>Created for Digital eStore project</description>
        <label>Collateral Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Type__c</fullName>
        <label>Collateral Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Last_Updated__c</fullName>
        <description>DPS-20819 Date the asset reference was last updated to EPM.</description>
        <label>Date Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Loaded__c</fullName>
        <description>DPS-20819 Date the asset reference was uploaded to EPM.</description>
        <label>Date Loaded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used to store EPM data</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as Part of DPS-22587</description>
        <label>Product Collateral-Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Collateral</relationshipLabel>
        <relationshipName>Product_Collaterals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System_Collateral_ID__c</fullName>
        <description>DPS-20819 Reference to all products referenced to this asset</description>
        <label>Reference Tag (EPM)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>DPS-20819 Value that notes is the asset is active or retired.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_Description__c</fullName>
        <description>DPS-20819 Free text on page description of video</description>
        <label>Video Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Video_Duration__c</fullName>
        <description>DPS-20819 Length Of Video</description>
        <label>Video time stamp with duration of video</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Video_Metadata__c</fullName>
        <description>DPS-20819 Free text description of video for Google</description>
        <label>Video Metadata</label>
        <type>TextArea</type>
    </fields>
    <label>Product Collateral</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Product Collateral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Collaterals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>